// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Var checkGrammar 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkGrammar 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkGrammar 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkGrammar 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkHighlight 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkHighlight 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkHighlight 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkHighlight 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkSpaces 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkSpaces 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkSpaces 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var checkSpaces 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var className 1`] = `
<var
  className="uu5-bricks-var my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var content 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</var>
`;

exports[`UU5.Bricks.Var content 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</var>
`;

exports[`UU5.Bricks.Var content 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</var>
`;

exports[`UU5.Bricks.Var content 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</var>
`;

exports[`UU5.Bricks.Var controlled 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var controlled 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var controlled 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var controlled 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var default props 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var disabled 1`] = `
<var
  className="uu5-bricks-var uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</var>
`;

exports[`UU5.Bricks.Var disabled 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var disabled 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var disabled 4`] = `
<var
  className="uu5-bricks-var uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</var>
`;

exports[`UU5.Bricks.Var docKit examples UU5.Bricks.Var should render without crash 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Var
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    redPill
  </Var>
  <UU5.Common.TextCorrectorContextConsumer
    key="1"
    text=" is in this case variable."
  />
</p>
`;

exports[`UU5.Bricks.Var dynamic 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var dynamic 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var dynamic 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var dynamic 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var hidden 1`] = `
<var
  className="uu5-bricks-var uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var hidden 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var hidden 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var hidden 4`] = `
<var
  className="uu5-bricks-var uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var id 1`] = `
<var
  className="uu5-bricks-var"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var ignoreHTML 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var ignoreHTML 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var ignoreHTML 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var ignoreHTML 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var mainAttrs 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var name 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var noIndex 1`] = `
<var
  className="uu5-bricks-var uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var noIndex 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var noIndex 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var noIndex 4`] = `
<var
  className="uu5-bricks-var uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var selected 1`] = `
<var
  className="uu5-bricks-var uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var selected 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var selected 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var selected 4`] = `
<var
  className="uu5-bricks-var uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var style 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Var style 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Var style 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Var style 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Var textCorrector 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var textCorrector 2`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var textCorrector 3`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var textCorrector 4`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Var tooltip 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
